# rust-scan-rules

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  update-docs.py
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/convert/: trait.From.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/iter/: trait.Iterator.js
doc/implementors/core/marker/: trait.Copy.js
doc/implementors/core/ops/: trait.Deref.js  trait.DerefMut.js  trait.Drop.js  trait.Index.js
doc/scan_rules/: enum.ScanErrorKind.html  enum.Word.html  index.html  macro.let_scan!.html  macro.readln!.html  macro.scan!.html  macro.try_readln!.html  struct.Cursor.html  struct.ScanError.html  struct.ScanErrorAt.html  trait.ScanInput.html
doc/scan_rules/error/: enum.ScanErrorKind.html  index.html  struct.ScanError.html  struct.ScanErrorAt.html
doc/scan_rules/input/: enum.ExactCompare.html  enum.ExactSpace.html  enum.FuzzySpace.html  enum.IgnoreAsciiCase.html  enum.IgnoreCase.html  enum.IgnoreNonLine.html  enum.IgnoreSpace.html  enum.NonSpace.html  enum.Wordish.html  index.html  struct.Cursor.html  struct.StrCursor.html  trait.IntoScanCursor.html  trait.ScanCursor.html  trait.ScanInput.html  trait.SkipSpace.html  trait.SliceWord.html  trait.StrCompare.html
doc/scan_rules/internal/: fn.strip_line_term.html  fn.subslice_offset.html  fn.try_scan_runtime.html  fn.try_scan_static.html  fn.try_scan_static_self.html  index.html
doc/scan_rules/macros/: index.html
doc/scan_rules/scanner/: enum.QuotedString.html  enum.Word.html  fn.exact_width.html  fn.exact_width_a.html  fn.max_width.html  fn.max_width_a.html  fn.min_width.html  fn.min_width_a.html  fn.re.html  fn.re_a.html  fn.re_str.html  fn.scan_a.html  index.html  struct.Binary.html  struct.Everything.html  struct.Hex.html  struct.HorSpace.html  struct.Ident.html  struct.Inferred.html  struct.KeyValuePair.html  struct.Line.html  struct.Newline.html  struct.NonSpace.html  struct.Number.html  struct.Octal.html  struct.Space.html  struct.Word.html  struct.Wordish.html  trait.ScanFromBinary.html  trait.ScanFromHex.html  trait.ScanFromOctal.html  trait.ScanFromStr.html  trait.ScanSelfFromStr.html  trait.ScanStr.html
doc/scan_rules/unicode/: index.html
doc/scan_rules/util/: index.html
examples/: ask_age.rs  runtime_scanners.rs  scan_data.rs
scripts/: test-matrix.py  unicode.py
src/: error.rs  input.rs  internal.rs  lib.rs  macros.rs  scanner.rs  unicode.rs  util.rs
src/scanner/: lang.rs  macros.rs  misc.rs  mod.rs  runtime.rs  std.rs  util.rs
src/scanner/std/: collections.rs  mod.rs  net.rs  time.rs
tests/: case_match.rs  cursor_markers.rs  let_scan.rs  major_tom.rs  maps.rs  multiple_rules.rs  repeating.rs  runtime_scanner.rs  scan_space.rs  tuple_struct.rs  tuples.rs  whizzo.rs
tests/data/: maps
tests/util/: mod.rs
(+56 files in other folders)
